Archive2/7e/22baff11991d8e/output
main.cpp:10:4: error: C++ requires a type specifier for all declarations
   a=1,
   ^
main.cpp:11:4: error: C++ requires a type specifier for all declarations
   b=2,
   ^
main.cpp:12:4: error: C++ requires a type specifier for all declarations
   c=3
   ^
main.cpp:12:7: error: expected ';' at end of declaration list
   c=3
      ^
      ;
4 errors generated.
